--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>math</title>	
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 	</head>
 
 	<body>
@@ -11,8 +11,8 @@
 			<h4 id="instructions">
 				Solve as many basic arithmetic problems as you can in a span of 120 seconds.
 			</h4>
-			<form action="/hello" method="get">
-				<button type="submit" class="btn btn-primary" href="/hello">Start</button>
+			<form action="/game" method="get">
+				<button type="submit" class="btn btn-primary">Start</button>
 	      	</form>
       	</div>
 	</body>
