--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -3,11 +3,13 @@
 	<head>
 		<title>math</title>	
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="{{ url_for('static', filename='game.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/game.css') }}">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="{{ url_for('static', filename='js/game.js') }}"></script>
 	</head>
 
 	<body>
-		game
+		<div id="math_box">
+      	</div>
 	</body>
 </html>
