--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -9,6 +9,10 @@
 	</head>
 
 	<body>
+		<div id="top_box">
+			<span id="timer">timer</span>
+			<span id="score">Score: 0</span>
+		</div>
 		<div id="math_box">
 			<span id="question"></span>
 			<input id="answer">
