simplified database schema
to be just score + timestamp
added logic to return the percentile of a score on the POST request

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -20,7 +20,7 @@
 			</div>
 			<div id="results" style="display:none">
 				<h4 id="final_score"></h4>
-
+				<p id="percentile"></p>
 				<form action="/game" method="get">
 					<button type="submit" class="btn btn-primary">Try Again</button>
 	      		</form>
