--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -21,7 +21,7 @@
 			<div id="results" style="display:none">
 				<h4 id="final_score"></h4>
 				<p id="percentile"></p>
-				<form action="/game" method="get">
+				<form action="/" method="get">
 					<button type="submit" class="btn btn-primary">Try Again</button>
 	      		</form>
       		</div>
