--- a/app/static/css/game.css
+++ b/app/static/css/game.css
@@ -6,8 +6,7 @@ html, body {
 	margin: 0 auto;
 	width: 100%;
 	background-color: #eff0f1;
-	position: relative;
-	top: 30%;
+	margin-top: 16%;
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -36,4 +35,16 @@ html, body {
 
 #timer, #score {
 	font-size: 20px;
+}
+
+.bar {
+	fill: steelblue;
+}
+
+.bar:hover {
+	fill: orange;
+}
+
+#chart {
+	padding-top: 50px;
 }
