--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/game.css') }}">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+		<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 		<script src="{{ url_for('static', filename='js/game.js') }}"></script>
 	</head>
 
@@ -26,7 +28,7 @@
 	      		</form>
       		</div>
       	</div>
-      	<div id="results_box">
-      	</div>
+
+      	<div id="chart"></div>
 	</body>
 </html>
